<resources>
    <string name="app_name">ImdbMovieApp</string>
    <string name="search_text">Search Text</string>
    <string name="cancel">Cancel</string>
    <string name="movies">Movies</string>
    <string name="about_movie">About Movie</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="no_movies_added_yet">No movies added yet</string>
    <string name="details">Details</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top-Rated</string>
    <string name="alpha">alpha</string>
    <string name="trailer">Trailer</string>
    <string name="data_can_t_be_loaded">Data can\'t be loaded</string>
    <string name="internet_connection_or_some_other_server_error">internet connection or some other server error</string>
    <string name="refresh">Refresh</string>
</resources>